# CH32X035

./: .gitmodules  CH32V035.INIT  CMakeLists.txt  README.md  flash.sh  tinyusb.cmake  wch-riscv.cfg
Apps/FreeRTOS/: .cproject  .project  .template  CMakeLists.txt  ch32x035_it.c  main.c  system_ch32x035.c  system_ch32x035.h
Apps/FreeRTOS/FreeRTOS/: tasks.c
Apps/SimulateCDC/: CMakeLists.txt  ch32_usbfs_regs.h  ch32x035_conf.h  ch32x035_usbfs_device.c  ch32x035_usbfs_device.h  dcd_ch32_usbfs.c  main.c  tusb_config.h
Apps/gpio/: CMakeLists.txt  main.c  nor_flash.c
SDK/: CMakeLists.txt
SDK/Core/: core_riscv.c  core_riscv.h
SDK/Debug/: debug.c
SDK/Ld/: Link.ld
SDK/Peripheral/inc/: ch32x035.h
SDK/Startup/: startup_ch32x035.S
components/lcd/: CMakeLists.txt  fonts.c  fonts.h  lcd_api.c  lcd_api.h  rgb_color.h  st7735.c  st7735.h  st7789.c  st7789.h
config/: lv_conf.h  lv_disp.c
